<resources>
    <string name="app_name">Algorithm Visualizer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sorting_algorithm">Sorting \nAlgorithms</string>
    <string name="searching_n_algorithm">Searching \n Algorithms</string>
    <string name="graph_n_algorithms">Graph \n Algorithms</string>
    <string name="path_finding_alg">Path Finding\nAlgorithms</string>
    <string name="lists">Lists</string>
    <string name="queues_amp_stacks"><![CDATA[Queues & Stacks]]></string>
    <string name="title">TITLE</string>
    <string name="worst">Worst</string>
    <string name="search_alg">Searching Algorithm</string>
    <string name="stack_queue">Stack and Queue</string>
    <string name="list">List</string>
    <string name="sorting_alg">Sorting Algorithm</string>
    <string name="binary_tree">Binary Tree</string>
    <string name="graph_theory">Graph Theory</string>
    <string name="shuffle">shuffle</string>
    <string name="type_here">type here...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">add</string>
    <string name="play">play</string>
    <string name="search_hint">search</string>
    <string name="search">search</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="currently_sorting">Currently\nSorting</string>
    <string name="middle">Middle</string>
    <string name="less_than_swapping">Less than or Swapping</string>
    <string name="comparing">Comparing</string>
    <string name="stack">Stack</string>
    <string name="dividing">dividing</string>
    <string name="_3">3</string>
    <string name="pivot">Pivot</string>
    <string name="left_pointer">Left Pointer</string>
    <string name="right_pointer">Right pointer</string>
    <string name="current_element">Current element</string>
    <string name="green">Swapping/less than</string>
    <string name="target">Target</string>
    <string name="found_target">Found the target</string>
    <string name="divided">Divided</string>
    <string name="average">Average</string>
    <string name="best">Best</string>
    <string name="dummyLorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="todo">TODO</string>
    <string name="done_editing">done editing</string>
    <string name="edit">edit</string>
    <string name="ratio">ratio</string>
    <string name="ratio_text">3:3  </string>
    <string name="algorithm_visualizer">Algorithm Visualizer</string>
    <string name="tagline">help you visualize it.</string>
    <string name="legend">LEGEND:</string>
    <string name="block">Block</string>
    <string name="start">Start</string>
    <string name="pos">traversed</string>
    <string name="path">path</string>
</resources>